test functions clusters notebook

--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -157,6 +157,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a34f107-39d2-4e5c-a460-f214a09eba13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.03494051714326959 -0.03078588842091253 1.0526944270635297 1.042564921306492\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.980993144464667)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.021053888541270594\" opacity=\"0.6\" d=\"M 0.00530309290181763,0.008202794062921903 L 0.0040481653405648466,0.5179846104194522 L 0.03062262276428851,0.9727903504017452 L 0.1190600315964776,0.9607369824508271 L 0.9004240456951502,0.8760868879803182 L 0.9674836303226872,0.9638916715475083 L 0.9787652274364257,0.41409734279266874 L 0.9422227575881483,0.24448296301809758 L 0.9509355729457261,0.024364847498242748 L 0.48984714370994176,0.12784452771561228 L 0.00530309290181763,0.008202794062921903 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide\n",
+    "x = [random.random() for i in range(20)] \n",
+    "y = [random.random() for i in range(20)] \n",
+    "points_check = [i for i in zip(x,y)]\n",
+    "get_alpha_shape(points_check) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "730387c7-9988-4be2-a3cc-f160e8169352",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide \n",
+    "### bouth are checked\n",
+    "set_colinear(points_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "adc2bcd9-6a58-4cb9-b971-26a87f7db85f",
    "metadata": {},
    "outputs": [],
@@ -187,6 +238,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96558b0c-b036-4772-87f8-d5d518a6b6e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "lines = get_segments(points_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "469c930c-2913-4b1e-ba9f-d10f41c09caf",
    "metadata": {},
    "outputs": [],
@@ -208,6 +270,31 @@
     "    result = unary_union(result)\n",
     "    result = result.buffer(0.0000001)\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc67e95e-3769-49e2-b61a-d2d323654452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.03494062514211262 -0.0307859964054562 1.0526946430404727 1.0425651372856712\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.9809931444747588)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.021053892860809453\" opacity=\"0.6\" d=\"M 0.03062252293455792,0.972790356234831 L 0.03062252393985474,0.9727903656900182 L 0.030622525838634996,0.9727903750069823 L 0.030622528613731582,0.9727903841014875 L 0.030622532240054526,0.9727903928913094 L 0.030622536684817805,0.972790401296978 L 0.030622541907835792,0.9727904092424968 L 0.030622547861886562,0.9727904166560295 L 0.03062255449313883,0.9727904234705492 L 0.030622561741638667,0.9727904296244453 L 0.030622569541851517,0.9727904350620795 L 0.030622577823254737,0.9727904397342896 L 0.030622586510975172,0.9727904435988335 L 0.030622595526466116,0.9727904466207715 L 0.030622604788217444,0.972790448772782 L 0.03062261421249256,0.9727904500354081 L 0.03062262371408548,0.9727904503972346 L 0.9674836312724843,0.9638917715429977 L 0.967483640882657,0.9638917709883804 L 0.9674836503949781,0.9638917695123139 L 0.967483659721303,0.963891767128476 L 0.9674836687752116,0.963891763858956 L 0.9674836774728075,0.9638917597340502 L 0.9674836857334961,0.9638917547919812 L 0.9674836934807314,0.9638917490785438 L 0.9674837006427252,0.9638917426466803 L 0.9674837071531123,0.9638917355559905 L 0.9674837129515653,0.9638917278721788 L 0.9674837179843543,0.9638917196664456 L 0.9674837222048438,0.9638917110148277 L 0.9674837255739255,0.9638917019974939 L 0.9674837280603803,0.9638916926980012 L 0.9674837296411682,0.9638916832025217 L 0.967483730301641,0.9638916735990433 L 0.9787653274153795,0.4140973448442037 L 0.9787653271824481,0.4140973356700978 L 0.9509356726917485,0.024364840375671822 L 0.9509356715022715,0.024364830568761094 L 0.9509356693509777,0.024364820927065774 L 0.9509356662588617,0.024364811544679506 L 0.9509356622560995,0.024364802513165335 L 0.9509356573817542,0.024364793920662122 L 0.9509356516833948,0.024364785851024414 L 0.9509356452166315,0.02436477838300409 L 0.950935638044574,0.024364771589481825 L 0.9509356302372146,0.024364765536755838 L 0.9509356218707455,0.0243647602838949 L 0.9509356130268154,0.024364755882161866 L 0.9509356037917326,0.024364752374513403 L 0.9509355942556224,0.024364749795180777 L 0.9509355845115482,0.024364748169335787 L 0.9509355746546028,0.024364747512845113 L 0.005303094610694359,0.008202694077524268 L 0.005303084711062252,0.008202694398928774 L 0.005303074891786384,0.008202695698097019 L 0.005303065249199758,0.008202697962283378 L 0.005303055877901952,0.008202701169274823 L 0.005303046869831034,0.008202705287608837 L 0.005303038313361601,0.008202710276882085 L 0.005303030292437765,0.008202716088146796 L 0.005303022885749617,0.008202722664390965 L 0.005303016165961222,0.008202729941097683 L 0.005303010198997749,0.008202737846878074 L 0.005303005043398698,0.008202746304171681 L 0.005303000749743599,0.008202755230007361 L 0.005302997360155792,0.008202764536817298 L 0.005302994907889171,0.008202774133296085 L 0.005302993417001949,0.008202783925296494 L 0.005302992902120626,0.008202793816753108 L 0.004048065340867843,0.5179846101732835 L 0.004048065510834258,0.517984616252538 L 0.03062252293455792,0.972790356234831 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide\n",
+    "get_polygons_buf(lines)"
    ]
   },
   {
@@ -253,6 +340,14 @@
     "    \n",
     "    return np.array(labels_p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "328d9a08-81ab-41ac-a65b-0a3524554e83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -446,7 +541,7 @@
     "#| export \n",
     "def jaccard_distance(p1, p2):\n",
     "    \"\"\"\n",
-    "    Computes the Jaccard similarity measuremen between two polygons.\n",
+    "    Computes the Jaccard similarity between two polygons.\n",
     "    \n",
     "    param: p1 shapely Poligon \n",
     "    param: p2 shapely Poligon \n",
@@ -1400,6 +1495,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cb5a2b9-8955-42ea-b4f7-39bbbae48e88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c1e4c8-ec0d-43a2-b6ff-4c41bf05751f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:98: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "  return shapely.ops.cascaded_union(keep_triangles)\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:376: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  points_cluster_o = [p for p in points_cluster if\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:1093: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  all_points =all_points+[i for i in node.get_points(all_tag = iterative )]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| hide \n",
+    "HGC = TreeClusters(4, random_seed= 124)\n",
+    "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
+    "original_poicompute_OPTICSnts= HGC.get_points_tree()\n",
+    "X_2=np.array([[p.x,p.y] for p in original_points])\n",
+    "dic_points={'points':[X_2], 'parent':''}\n",
+    "res_HDBSCAN_clus, noise = compute_hdbscan(X_2, return_noise = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8517503-4f13-4b67-9970-3f49c058d540",
    "metadata": {},
    "outputs": [
@@ -1511,6 +1643,35 @@
     "        return clusters, points_ret[class_member_mask]\n",
     "\n",
     "    return clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294a18f5-3d42-4b26-9d15-a5ccdff743fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:98: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "  return shapely.ops.cascaded_union(keep_triangles)\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:376: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  points_cluster_o = [p for p in points_cluster if\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:1093: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  all_points =all_points+[i for i in node.get_points(all_tag = iterative )]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| hide \n",
+    "HGC = TreeClusters(4, random_seed= 124)\n",
+    "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
+    "original_poicompute_OPTICSnts= HGC.get_points_tree()\n",
+    "X_2=np.array([[p.x,p.y] for p in original_points])\n",
+    "dic_points={'points':[X_2], 'parent':''}\n",
+    "res_OPTICS_clus, noise = compute_OPTICS(X_2, return_noise = True)"
    ]
   },
   {
@@ -1653,6 +1814,35 @@
     "        return clusters, points_ret[class_member_mask]\n",
     "\n",
     "    return clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b83cdddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:98: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "  return shapely.ops.cascaded_union(keep_triangles)\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:376: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  points_cluster_o = [p for p in points_cluster if\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:1093: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "  all_points =all_points+[i for i in node.get_points(all_tag = iterative )]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| hide \n",
+    "HGC = TreeClusters(4, random_seed= 124)\n",
+    "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
+    "original_poicompute_OPTICSnts= HGC.get_points_tree()\n",
+    "X_2=np.array([[p.x,p.y] for p in original_points])\n",
+    "dic_points={'points':[X_2], 'parent':''}\n",
+    "res_OPTICS_clus, noise = compute_OPTICS(X_2, return_noise = True)"
    ]
   },
   {
@@ -1854,11 +2044,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:97: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:98: ShapelyDeprecationWarning: The 'cascaded_union()' function is deprecated. Use 'unary_union()' instead.\n",
       "  return shapely.ops.cascaded_union(keep_triangles)\n",
-      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:375: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:376: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
       "  points_cluster_o = [p for p in points_cluster if\n",
-      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:1088: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
+      "/mnt/HDD2/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py:1093: ShapelyDeprecationWarning: Iteration over multi-part geometries is deprecated and will be removed in Shapely 2.0. Use the `geoms` property to access the constituent parts of a multi-part geometry.\n",
       "  all_points =all_points+[i for i in node.get_points(all_tag = iterative )]\n"
      ]
     }
