change the style.css location

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -63,7 +63,7 @@
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from HierarchicalGeoClustering.documentation import *"
+    "#from HierarchicalGeoClustering.documentation import *"
    ]
   },
   {
@@ -2004,8 +2004,8 @@
     }
    ],
    "source": [
-    "\n",
-    "document_alternative(NodeCluster.populate_cluster, level=2)"
+    "#|hide\n",
+    "#document_alternative(NodeCluster.populate_cluster, level=2)"
    ]
   },
   {
@@ -2025,7 +2025,8 @@
     }
    ],
    "source": [
-    "table_string(NodeCluster.populate_cluster)"
+    "#|hide \n",
+    "##table_string(NodeCluster.populate_cluster)"
    ]
   },
   {
