Cambios para arreglo de errores en el dicionario de los tags sin float

--- a/src/02_tutorial.ipynb
+++ b/src/02_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "469b88c2-c66e-4ab2-add9-6a9682d25071",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62461aec-3e40-46ef-bd98-01b4f2cc49e1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a5e50cb5-11cc-4044-9eaa-138f8353c257",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "878845d0-0c3c-4080-8c7b-58ee28096e4c",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "21a895ad-ac31-4961-ae65-b3e97f962002",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "97bfbc67-f7dc-4138-9dbe-c924cc20a77f",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "<MULTIPOINT (0.598 0.477, 0.519 0.622, 0.744 0.601, 0.503 0.762, 0.349 0.647...>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "77ec9782-a4b3-4e5d-9eb1-b4377bb4f36f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e4de2f12-46bf-42af-bf6d-379c34806dd1",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "88abd338-7526-48f2-b134-a4f4dccd16f7",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "13f082eb-7aa5-4ca3-b736-f1b6f90094e8",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b62e174f-2a05-4190-84c2-6d1faa19c8b5",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "57ffcfba-51b1-4d2c-ac8e-8e5fd7c3dac1",
    "metadata": {},
    "outputs": [
@@ -860,26 +860,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.11 ('HCL')",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "99a67bf494faf01d0463ffe6f8d7c693c5a5e7296b75b1b07ed504fb7e8045e0"
-   }
   }
  },
  "nbformat": 4,
