The error is still there but some changes are made

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp TreeClusters\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#| default_exp TreeClusters\n"
    ]
   },
   {
@@ -51,19 +49,6 @@
     "from matplotlib import cm\n",
     "from anytree import NodeMixin, RenderTree\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "#from HierarchicalGeoClustering.documentation import *"
    ]
   },
   {
