Change hide export directives

--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp Clustering\n"
+    "#|default_exp Clustering"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "#|hide\n",
     "from nbdev import *\n",
     "from nbdev.showdoc import show_doc\n",
     "import warnings"
@@ -30,8 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "#| export\n",
+    "#|export\n",
     "import os\n",
     "import sys\n",
     "import numpy as np\n",
@@ -66,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "#|export \n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
@@ -81,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "#| export\n",
+    "#|export\n",
     "def get_alpha_shape(point_list):\n",
     "    \"\"\"\n",
     "    Returns a polygon representing the hull of the points sample.\n",
@@ -126,7 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
     "#| export\n",
     "def set_colinear(list_points):\n",
     "    \"\"\"\n",
@@ -149,7 +146,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
     "#| export\n",
     "def collinear(p1, p2, p3):\n",
     "    \"\"\"\n",
@@ -224,7 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
     "#| export\n",
     "def get_segments(points):\n",
     "    \"\"\" \n",
@@ -254,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "#|hide\n",
     "lines = get_segments(points_check)"
    ]
   },
@@ -265,8 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "#| export \n",
+    "#|export \n",
     "def get_polygons_buf(lines):\n",
     "    \"\"\"\n",
     "    Obtain the poligons from the lines\n",
@@ -316,8 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "#| export \n",
+    "#|export \n",
     "def jaccard_distance(p1, p2):\n",
     "    \"\"\"\n",
     "    Computes the Jaccard similarity between two polygons.\n",
@@ -350,7 +343,7 @@
     }
    ],
    "source": [
-    "#| hide\n",
+    "#|hide\n",
     "x = [random.random() for i in range(20)] \n",
     "y = [random.random() for i in range(20)] \n",
     "x2 = [random.random() for i in range(20)] \n",
@@ -391,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|export\n",
     "def compute_dbscan(cluster,  **kwargs):\n",
     "    \n",
     "    \"\"\" \n",
@@ -482,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "#|hide\n",
     "### Pruebas \n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
@@ -564,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|export\n",
     "def adaptative_DBSCAN(points2_clusters ,\n",
     "                **kwargs):\n",
     "    \"\"\"\n",
@@ -713,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide \n",
+    "#|hide \n",
     "### Test\n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
@@ -805,7 +798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|export\n",
     "def compute_hdbscan(points2_clusters,  **kwargs):\n",
     "    \n",
     "    \"\"\"\n",
@@ -886,7 +879,7 @@
     }
    ],
    "source": [
-    "#| hide \n",
+    "#|hide \n",
     "### Test\n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
@@ -947,7 +940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|export\n",
     "def compute_OPTICS(points2_clusters,  **kwargs):\n",
     "    \n",
     "    \"\"\" OPTICS wrapper.\n",
@@ -1019,7 +1012,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide \n",
+    "#|hide \n",
     "### Test\n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
@@ -1084,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "#|export \n",
     "\n",
     "def natural_cities_polygons(a_points, **kwargs ):\n",
     "    \"\"\" Take a array of points and returns the natural Cities polygons.\n",
@@ -1145,7 +1138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "#|export \n",
     "def compute_Natural_cities(points2_clusters, **kwargs):\n",
     "    \"\"\"\n",
     "    Compute Natural cities clustering\n",
@@ -1231,7 +1224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide \n",
+    "#|hide \n",
     "### Test\n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
@@ -1292,7 +1285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export \n",
+    "#|export \n",
     "def compute_AMOEBA(points_array, **kwargs):\n",
     "    \"\"\"The function obtains the AMOEBA algorithm on level basis\n",
     "    \n",
@@ -1437,7 +1430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide \n",
+    "#|hide \n",
     "### Test\n",
     "HGC = TreeClusters(4, random_seed= 124)\n",
     "HGC.populate_tree(number_per_cluster=40, avoid_intersec= True)\n",
