--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -3973,6 +3973,7 @@
     }
    ],
    "source": [
+    "#|hide\n",
     "exp_tree = experiment_all  (tree_level= 3,\n",
     "                                per_cluster = 50,\n",
     "                                levels_cluster =  3,\n",
@@ -3988,6 +3989,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|hide\n",
+    "\n",
     "exp_tree.clustering('dbscan')"
    ]
   },
@@ -4181,6 +4184,7 @@
     }
    ],
    "source": [
+    "#|hide\n",
     "#|eval: false\n",
     "exp_tree.get_dataframe('dbscan')"
    ]
@@ -4192,6 +4196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|hide\n",
     "#|eval: false\n",
     "# exp_tree.get_labels_trees(tree_to='dbscan')"
    ]
@@ -4203,6 +4208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|hide\n",
     "#|eval: false\n",
     "    \n",
     "#     if verbose:\n",
@@ -4425,9 +4431,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "HCL",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
