--- a/src/02_tutorial.ipynb
+++ b/src/02_tutorial.ipynb
@@ -823,9 +823,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "HCL",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
