--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -4431,13 +4431,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HCL",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
