--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -57,6 +57,18 @@
     "import random\n",
     "import time\n",
     "import re\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "893e6b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export \n",
+    "\n",
     "from CGAL.CGAL_Alpha_shape_2 import *\n",
     "from CGAL.CGAL_Kernel import Point_2\n",
     "from sklearn.cluster import DBSCAN, OPTICS\n",
@@ -69,8 +81,19 @@
     "from scipy.spatial import cKDTree, Delaunay\n",
     "from graph_tool.all import triangulation, label_components\n",
     "from scipy.linalg import norm\n",
-    "import hdbscan\n",
-    "import graph_tool\n"
+    "import hdbscan\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75aa49dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export \n",
+    "\n",
+    "import graph_tool"
    ]
   },
   {
@@ -4431,9 +4454,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "HCL",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
