publis in the same file as test

--- a/src/02_tutorial.ipynb
+++ b/src/02_tutorial.ipynb
@@ -592,10 +592,9 @@
    "source": [
     "To evaluate the clusterizations on a specific level $i$ using the $SSM$, the need for the shape of all the polygons on the level $i$ is needed. Therefore the evaluation is made using the nodes in the `TreeClusters` objects for the specific level to evaluate on the clusterizations to evaluate. \n",
     "\n",
-    "$$\n",
-    "SSM(\\mathcal{P}_i^O , \\mathcal{Q}_i^{C}) =\\frac{\\sum\\limits_{P_{l}^O\\in \\mathcal{P}_i^O  Q_{k}^C \\in{Q}_i^{C} } | P_{l}^O\\cap Q_{k}^C |* Jacc(P_{l}^O,Q_{k}^C)} {\\sum\\limits_{P \\in \\mathcal{P}_i^O} |P|  \n",
-    "+  \\sum\\limits_{Q \\in \\mathcal{Q}_{not}} |Q|} \n",
-    "$$"
+    "\n",
+    "$$SSM(\\mathcal{P}_i^O , \\mathcal{Q}_i^{C}) =\\frac{\\sum\\limits_{P_{l}^O\\in \\mathcal{P}_i^O  Q_{k}^C \\in{Q}_i^{C} } | P_{l}^O\\cap Q_{k}^C |* Jacc(P_{l}^O,Q_{k}^C)} {\\sum\\limits_{P \\in \\mathcal{P}_i^O} |P|  \n",
+    "+  \\sum\\limits_{Q \\in \\mathcal{Q}_{not}} |Q|}$$\n"
    ]
   },
   {
