se integran ecldas separadas

--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -68,7 +68,6 @@
    "outputs": [],
    "source": [
     "#|export \n",
-    "\n",
     "from CGAL.CGAL_Alpha_shape_2 import *\n",
     "from CGAL.CGAL_Kernel import Point_2\n",
     "from sklearn.cluster import DBSCAN, OPTICS\n",
@@ -81,18 +80,7 @@
     "from scipy.spatial import cKDTree, Delaunay\n",
     "from graph_tool.all import triangulation, label_components\n",
     "from scipy.linalg import norm\n",
-    "import hdbscan\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75aa49dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#|export \n",
-    "\n",
+    "import hdbscan\n",
     "import graph_tool"
    ]
   },
